Changed to .get(0), changed DataPB password to root, added DataPB query for searchFanBookings